--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,15 @@
 plugins {
     id 'java'
+    id 'application'
 }
+
+mainClassName = 'Execucao.Main'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-}
-
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'
 }
 
 test {
